--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1900,9 +1900,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a57dcc5-f857-4c39-a473-3ae6cf6d617f",
+   "metadata": {},
+   "source": [
+    "# How can I add this to my classes?\n",
+    "\n",
+    "1. I need to know how to respond to `iter` -- using a method called `__iter__`, which returns an iterator object, one that knows how to respond to `next`\n",
+    "2. I need to know how to respond to `next` -- using a method called `__next__`, which does one of two things:\n",
+    "    - returns the next object\n",
+    "    - raises `StopIteration`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a53b80c-3865-46e3-9807-a649c85ff182",
+   "id": "2b95eae6-2d1c-4b53-8002-6d13b77218c0",
    "metadata": {},
    "outputs": [],
    "source": []
