--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1918,6 +1918,24 @@
    "id": "2b95eae6-2d1c-4b53-8002-6d13b77218c0",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class MyIterator:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e863bd8-f3ab-420f-8658-20aa01568e63",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
