--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1914,19 +1914,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "2b95eae6-2d1c-4b53-8002-6d13b77218c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tIn __init__, data='abcd'\n",
+      "\tIn __iter__, vars(self)={'data': 'abcd', 'index': 0}\n",
+      "\tIn __next__, vars(self)={'data': 'abcd', 'index': 0}\n",
+      "\t\tReturning value='a'\n",
+      "a\n",
+      "\tIn __next__, vars(self)={'data': 'abcd', 'index': 1}\n",
+      "\t\tReturning value='b'\n",
+      "b\n",
+      "\tIn __next__, vars(self)={'data': 'abcd', 'index': 2}\n",
+      "\t\tReturning value='c'\n",
+      "c\n",
+      "\tIn __next__, vars(self)={'data': 'abcd', 'index': 3}\n",
+      "\t\tReturning value='d'\n",
+      "d\n",
+      "\tIn __next__, vars(self)={'data': 'abcd', 'index': 4}\n",
+      "\t\tRaising StopIteration\n"
+     ]
+    }
+   ],
    "source": [
     "class MyIterator:\n",
     "    def __init__(self, data):\n",
+    "        print(f'\\tIn __init__, {data=}')\n",
     "        self.data = data\n",
+    "        self.index = 0\n",
     "\n",
     "    def __iter__(self):\n",
+    "        print(f'\\tIn __iter__, {vars(self)=}')\n",
     "        return self\n",
     "\n",
     "    def __next__(self):\n",
+    "        print(f'\\tIn __next__, {vars(self)=}')\n",
+    "        if self.index >= len(self.data):\n",
+    "            print(f'\\t\\tRaising StopIteration')\n",
+    "            raise StopIteration\n",
+    "\n",
+    "        value = self.data[self.index]\n",
+    "        self.index += 1\n",
+    "        print(f'\\t\\tReturning {value=}')\n",
+    "        return value\n",
+    "\n",
+    "m = MyIterator('abcd')\n",
+    "for one_item in m:\n",
+    "    print(one_item)\n",
     "        "
    ]
   },
