--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -1992,12 +1992,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06db8d19-1c1a-4fb2-b71b-4913c74d2544",
+   "cell_type": "markdown",
+   "id": "5ed55a1d-0ffb-46ff-a839-0d284d9c3f70",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Circle\n",
+    "\n",
+    "1. Implement `Circle`, a class that takes two arguments:\n",
+    "    - First, data that's a sequence (string, list, tuple)\n",
+    "    - Second, the number of values we want to get from it when we iterate (`maxtimes`)\n",
+    "2. If `maxtimes` is smaller than the length of our sequence, then iterating over our object should give us `maxtimes` values.\n",
+    "3. If `maxtimes` is larger than the length of our sequence, "
+   ]
   }
  ],
  "metadata": {
