--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2002,8 +2002,24 @@
     "    - First, data that's a sequence (string, list, tuple)\n",
     "    - Second, the number of values we want to get from it when we iterate (`maxtimes`)\n",
     "2. If `maxtimes` is smaller than the length of our sequence, then iterating over our object should give us `maxtimes` values.\n",
-    "3. If `maxtimes` is larger than the length of our sequence, "
+    "3. If `maxtimes` is larger than the length of our sequence, then we should go through the values, and then go back to the start as many times as needed to get `maxtimes` values.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "```python\n",
+    "c = Circle('abcd', 9)\n",
+    "for one_item in c:\n",
+    "    print(one_item)    # a b c d a b c d a\n",
+    "```    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5362c16-b64a-4464-9091-930efe2b0d12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
