--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2019,7 +2019,26 @@
    "id": "e5362c16-b64a-4464-9091-930efe2b0d12",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Circle:\n",
+    "    def __init__(self, data, maxtimes):\n",
+    "        self.data = data\n",
+    "        self.maxtimes = maxtimes\n",
+    "        self.index = 0\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        if self.index >= self.maxtimes:\n",
+    "            raise StopIteration\n",
+    "\n",
+    "        value = self.data[self.index % len(self.data)]\n",
+    "\n",
+    "c = Circle('abcd', 9)\n",
+    "for one_item in c:\n",
+    "    print(one_item)   "
+   ]
   }
  ],
  "metadata": {
