--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2015,10 +2015,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "e5362c16-b64a-4464-9091-930efe2b0d12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "a\n"
+     ]
+    }
+   ],
    "source": [
     "class Circle:\n",
     "    def __init__(self, data, maxtimes):\n",
@@ -2034,11 +2046,89 @@
     "            raise StopIteration\n",
     "\n",
     "        value = self.data[self.index % len(self.data)]\n",
+    "        self.index += 1\n",
+    "        return value\n",
     "\n",
-    "c = Circle('abcd', 9)\n",
+    "c = Circle('abcd', 5)\n",
     "for one_item in c:\n",
     "    print(one_item)   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0b9a6705-76c5-49da-b51f-8beea8e53684",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** first time **\n",
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "** second time **\n",
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'abcd'\n",
+    "\n",
+    "print('** first time **')\n",
+    "for one_item in s:\n",
+    "    print(one_item)\n",
+    "\n",
+    "print('** second time **')\n",
+    "for one_item in s:\n",
+    "    print(one_item)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3782219c-8a29-4fe2-8d1f-e8f518397006",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** first time **\n",
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "a\n",
+      "** second time **\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = Circle('abcd', 5)\n",
+    "\n",
+    "print('** first time **')\n",
+    "for one_item in c:\n",
+    "    print(one_item)\n",
+    "\n",
+    "print('** second time **')\n",
+    "for one_item in c:\n",
+    "    print(one_item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16e74c3a-fe09-4dc0-8ea1-e97b15d3c1cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
