--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2128,7 +2128,36 @@
    "id": "16e74c3a-fe09-4dc0-8ea1-e97b15d3c1cd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class CircleIterator:\n",
+    "    def __init__(self, data, maxtimes):\n",
+    "        self.data = data\n",
+    "        self.maxtimes = maxtimes\n",
+    "        self.index = 0\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        if self.index >= self.maxtimes:\n",
+    "            raise StopIteration\n",
+    "\n",
+    "        value = self.data[self.index % len(self.data)]\n",
+    "        self.index += 1\n",
+    "        return value\n",
+    "    \n",
+    "\n",
+    "class Circle:\n",
+    "    def __init__(self, data, maxtimes):\n",
+    "        self.data = data\n",
+    "        self.maxtimes = maxtimes\n",
+    "        self.index = 0\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return CircleIterator(self.data, self.maxtimes)\n",
+    "\n",
+    "\n",
+    "c = Circle('abcd', 5)\n",
+    "for one_item in c:\n",
+    "    print(one_item)   "
+   ]
   }
  ],
  "metadata": {
