--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2124,10 +2124,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "16e74c3a-fe09-4dc0-8ea1-e97b15d3c1cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** first time **\n",
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "a\n",
+      "** second time **\n",
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "a\n"
+     ]
+    }
+   ],
    "source": [
     "class CircleIterator:\n",
     "    def __init__(self, data, maxtimes):\n",
@@ -2148,16 +2167,28 @@
     "    def __init__(self, data, maxtimes):\n",
     "        self.data = data\n",
     "        self.maxtimes = maxtimes\n",
-    "        self.index = 0\n",
     "\n",
     "    def __iter__(self):\n",
     "        return CircleIterator(self.data, self.maxtimes)\n",
     "\n",
-    "\n",
     "c = Circle('abcd', 5)\n",
+    "\n",
+    "print('** first time **')\n",
     "for one_item in c:\n",
-    "    print(one_item)   "
+    "    print(one_item)\n",
+    "\n",
+    "print('** second time **')\n",
+    "for one_item in c:\n",
+    "    print(one_item)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3c54059-e5c1-4e2e-892c-7cb41a9f2a1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
