--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2280,12 +2280,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab5dc061-dab1-41c7-bdbc-fe15d20f638d",
+   "cell_type": "markdown",
+   "id": "529f85ef-76c2-4ca2-9b22-a5a3bf9bffdf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: OnlyVowels\n",
+    "\n",
+    "1. Define `OnlyVowels`, a class that takes a single string arguments.\n",
+    "2. "
+   ]
   }
  ],
  "metadata": {
