--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2287,8 +2287,17 @@
     "# Exercise: OnlyVowels\n",
     "\n",
     "1. Define `OnlyVowels`, a class that takes a single string arguments.\n",
-    "2. "
+    "2. If I iterate with a `for` loop over an instance of `OnlyVowels`, I'll get (one by one) the vowels (a, e, i, o, u) from there.\n",
+    "3. Implement this with two classes, rather than one."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b0a16a8-b917-478d-82dd-31d99ae16da0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
