--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2297,7 +2297,18 @@
    "id": "1b0a16a8-b917-478d-82dd-31d99ae16da0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class OnlyVowels:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.index = 0\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        while self.index < "
+   ]
   }
  ],
  "metadata": {
