--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2293,10 +2293,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "1b0a16a8-b917-478d-82dd-31d99ae16da0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n",
+      "i\n",
+      "a\n",
+      "e\n"
+     ]
+    }
+   ],
    "source": [
     "class OnlyVowels:\n",
     "    def __init__(self, data):\n",
@@ -2307,7 +2318,52 @@
     "        return self\n",
     "\n",
     "    def __next__(self):\n",
-    "        while self.index < "
+    "        if self.index >= len(self.data):\n",
+    "            raise StopIteration\n",
+    "\n",
+    "        value = self.data[self.index]\n",
+    "        self.index += 1\n",
+    "        if value in 'aeiou':\n",
+    "            return value\n",
+    "        return self.__next__()\n",
+    "\n",
+    "o = OnlyVowels('this is a test')\n",
+    "for one_item in o:\n",
+    "    print(one_item)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1be2ef6b-c64a-455c-bfe9-34af099f1406",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# two-class version\n",
+    "\n",
+    "class OnlyVowels:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.index = 0\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        if self.index >= len(self.data):\n",
+    "            raise StopIteration\n",
+    "\n",
+    "        value = self.data[self.index]\n",
+    "        self.index += 1\n",
+    "        if value in 'aeiou':\n",
+    "            return value\n",
+    "        return self.__next__()\n",
+    "\n",
+    "o = OnlyVowels('this is a test')\n",
+    "for one_item in o:\n",
+    "    print(one_item)\n",
+    "            "
    ]
   }
  ],
