--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2335,36 +2335,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "1be2ef6b-c64a-455c-bfe9-34af099f1406",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n",
+      "i\n",
+      "a\n",
+      "e\n"
+     ]
+    }
+   ],
    "source": [
     "# two-class version\n",
     "\n",
-    "class OnlyVowels:\n",
-    "    def __init__(self, data):\n",
-    "        self.data = data\n",
+    "class OnlyVowelsIterator:\n",
+    "    def __init__(self, ov):\n",
+    "        self.only_vowels = ov\n",
     "        self.index = 0\n",
     "\n",
-    "    def __iter__(self):\n",
-    "        return self\n",
-    "\n",
     "    def __next__(self):\n",
-    "        if self.index >= len(self.data):\n",
+    "        if self.index >= len(self.only_vowels.data):\n",
     "            raise StopIteration\n",
     "\n",
-    "        value = self.data[self.index]\n",
+    "        value = self.only_vowels.data[self.index]\n",
     "        self.index += 1\n",
     "        if value in 'aeiou':\n",
     "            return value\n",
     "        return self.__next__()\n",
+    "\n",
+    "class OnlyVowels:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return OnlyVowelsIterator(self)\n",
+    "\n",
     "\n",
     "o = OnlyVowels('this is a test')\n",
     "for one_item in o:\n",
     "    print(one_item)\n",
     "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a15f3f34-0fde-42a6-8e35-04dff7c7baef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
