--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2335,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "1be2ef6b-c64a-455c-bfe9-34af099f1406",
    "metadata": {},
    "outputs": [
@@ -2343,6 +2343,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "** first time **\n",
+      "i\n",
+      "i\n",
+      "a\n",
+      "e\n",
+      "** second time **\n",
       "i\n",
       "i\n",
       "a\n",
@@ -2377,9 +2383,14 @@
     "\n",
     "\n",
     "o = OnlyVowels('this is a test')\n",
+    "\n",
+    "print('** first time **')\n",
     "for one_item in o:\n",
     "    print(one_item)\n",
-    "            "
+    "\n",
+    "print('** second time **')\n",
+    "for one_item in o:\n",
+    "    print(one_item)\n"
    ]
   },
   {
