--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2395,8 +2395,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "a15f3f34-0fde-42a6-8e35-04dff7c7baef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i', 'i', 'a', 'e']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "285fc8a4-7f0f-4af1-8779-25f55edd4eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a', 'e', 'i'}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{one_item\n",
+    "  for one_item in o}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "884b7794-4dc3-4dc3-8d99-edb2ac29ff1a",
+   "metadata": {},
+   "source": [
+    "# Generators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9ec5c21d-877f-4223-84d4-c8be3827605c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc():\n",
+    "    return 1\n",
+    "    return 2\n",
+    "    return 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1b772b99-07b7-4d4e-9687-e282d7122ef1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08bb613e-6f31-4207-9c07-8ea4c6c01ac9",
    "metadata": {},
    "outputs": [],
    "source": []
