--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2480,8 +2480,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "08bb613e-6f31-4207-9c07-8ea4c6c01ac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a7c95553-fcff-481e-ac05-a7ce55e98745",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1           0 RESUME                   0\n",
+      "\n",
+      "  2           2 LOAD_CONST               1 (1)\n",
+      "              4 RETURN_VALUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis.dis(myfunc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "5424c2b6-7278-40bd-ada1-ff76c9b4a64b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc():\n",
+    "    yield 1\n",
+    "    yield 2\n",
+    "    yield 3\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "47649e3e-0e45-4d8a-8727-8ea30b3c22cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object myfunc at 0x10ce33e20>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I get a generator object back! \n",
+    "# generators implement the iterator protocol\n",
+    "myfunc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "296000d9-c776-4e6b-b2df-04641d2d0fdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = myfunc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "0b1bb462-3e87-453e-abc9-86753b5b66a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "3fbacda0-d67b-4116-915e-acc4fe967939",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "80ee7dbd-9e93-4d02-a37c-5eaa1c5dedc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "83bd6cf0-77d0-4864-a6f8-b0e7ee8a0100",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[53], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mg\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "next(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18d833d3-087e-4748-9588-849c472aae41",
    "metadata": {},
    "outputs": [],
    "source": []
