--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2643,8 +2643,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "18d833d3-087e-4748-9588-849c472aae41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generator functions have \"yield\" in there somewhere\n",
+    "# running a generator function returns a generator object\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1694ee5-9941-4bac-a4e0-3b153cc95ab4",
    "metadata": {},
    "outputs": [],
    "source": []
