--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2654,11 +2654,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "f1694ee5-9941-4bac-a4e0-3b153cc95ab4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fib():\n",
+    "    first = 0\n",
+    "    second = 1\n",
+    "\n",
+    "    while True:\n",
+    "        yield first\n",
+    "        first, second = second, first+second"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "ce54f772-fe91-42d5-900b-504b8a37733a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = fib()    # create a generator for Fibonacci numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a217b57d-ace8-4974-80b6-f51113cf7557",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for one_ite"
+   ]
   }
  ],
  "metadata": {
