--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2680,13 +2680,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "a217b57d-ace8-4974-80b6-f51113cf7557",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597 2584 4181 6765 10946 17711 28657 46368 75025 121393 196418 317811 514229 832040 1346269 2178309 3524578 5702887 9227465 14930352 24157817 39088169 63245986 "
+     ]
+    }
+   ],
    "source": [
-    "for one_ite"
+    "for one_item in g:\n",
+    "    if one_item > 100_000_000:\n",
+    "        break\n",
+    "\n",
+    "    print(one_item, end=' ')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b60ad833-e2d2-43b8-9349-e0600046068c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
