--- a/2023 12December 25.ipynb
+++ b/2023 12December 25.ipynb
@@ -2856,8 +2856,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "264c2bf3-5b7d-458d-a050-5ff88a8ebb35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "165580141"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "6752d737-6d30-4f01-ba54-c8cd06167820",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'first': 165580141, 'second': 267914296}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.gi_frame.f_locals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d41f0be-fc0b-4539-a563-542ee50036c3",
+   "metadata": {},
+   "source": [
+    "# Next time:\n",
+    "\n",
+    "- Generator functions\n",
+    "- Generator comprehensions\n",
+    "- Concurrency\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69a3fceb-4b02-4692-8f60-70b40c53626e",
    "metadata": {},
    "outputs": [],
    "source": []
