--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -9,7 +9,10 @@
     "\n",
     "- Generator functions\n",
     "- Generator comprehensions\n",
-    "- Concurrency"
+    "- Concurrency\n",
+    "    - Threads\n",
+    "    - Multiprocessing\n",
+    "    - `asyncio`"
    ]
   },
   {
