--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -17,11 +17,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "38d6bdd7-ddf4-4d98-8930-2da9a9ab36a8",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def myfunc(x, y):\n",
+    "    for one_number in range(x, y):\n",
+    "        yield one_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5644bf4d-7cf3-46ea-b3d5-b5009e6f566a",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3e85c896-b0fa-461c-b8c8-32ffbcd89ab7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object myfunc at 0x10ce49700>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc(10, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0f14a946-756b-49ba-bc0c-3e30b48fbbe5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "for one_item in myfunc(10, 20):\n",
+    "    print(one_item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82ffb63d-e6d8-4c07-9985-12c028f9a473",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evenrange(start, finish):\n",
+    "    for one_number in range(start, finis"
+   ]
   }
  ],
  "metadata": {
