--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -86,13 +86,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "82ffb63d-e6d8-4c07-9985-12c028f9a473",
    "metadata": {},
    "outputs": [],
    "source": [
     "def evenrange(start, finish):\n",
-    "    for one_number in range(start, finis"
+    "    for one_number in range(start, finish):\n",
+    "        if one_number % 2:\n",
+    "            continue\n",
+    "        yield one_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a890f6a-f8e4-4fd4-8f7e-5356989e61b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d7b486aa-6d9d-488d-bc0f-d0ccfbef6d45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "for one_item in evenrange(10, 20):\n",
+    "    print(one_item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70d2f47b-38f8-4fae-bd83-63f5647a7915",
+   "metadata": {},
+   "source": [
+    "# "
    ]
   }
  ],
