--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -134,7 +134,13 @@
    "id": "70d2f47b-38f8-4fae-bd83-63f5647a7915",
    "metadata": {},
    "source": [
-    "# "
+    "# Things to remember about generators\n",
+    "\n",
+    "- `yield` means: return the value (in the iteration/loop), and go to sleep right after\n",
+    "- if we use `return` without an argument, we effectively raise `StopIteration`\n",
+    "- Also when the function exits normally/naturally, we effectively raise `StopIteration`\n",
+    "- Don't raise `StopIteration` in a generator function! Let the system do it for you\n",
+    "- "
    ]
   }
  ],
