--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -140,8 +140,143 @@
     "- if we use `return` without an argument, we effectively raise `StopIteration`\n",
     "- Also when the function exits normally/naturally, we effectively raise `StopIteration`\n",
     "- Don't raise `StopIteration` in a generator function! Let the system do it for you\n",
-    "- "
+    "- Local variables retain their values between invocations of `yield`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "21e83773-c535-4e67-b2e4-b1b60bb6b71f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc():\n",
+    "    return f'Hello, world!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4080a207-92a1-4413-9942-1d87c9aac14e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mygen():\n",
+    "    yield f'Hello, world!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c5e65b55-8f97-40a2-9016-ee57bd0dcf66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, world!'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f50e1d3f-210d-4283-98d4-9ee286a6ff72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object mygen at 0x10cebfd70>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mygen()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bd4f15ec-c17f-4412-8ec9-d834c9e52522",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "function"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(myfunc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0ad5ccc8-84f0-4941-8699-dac6642ab709",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "function"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(mygen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fe298b6b-6f6f-4410-93bd-e12f32d6eb0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, 'Hello, world!')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc.__code__.co_consts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a067110b-31ef-4c0e-9237-42a1592dba68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
