--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -272,8 +272,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a067110b-31ef-4c0e-9237-42a1592dba68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc.__code__.co_flags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "06eda0a1-7dae-4b91-af17-0a0c0a541a5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b11'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(myfunc.__code__.co_flags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b93492b2-a099-49a7-a6d4-05371d304901",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b100011'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(mygen.__code__.co_flags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b359c147-d68e-4458-a3c3-1619ae4642ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7070c16d-ae1c-4a2a-92fa-0c8c86a3e3a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:              myfunc\n",
+      "Filename:          /var/folders/rr/0mnyyv811fs5vyp22gf4fxk00000gn/T/ipykernel_76740/2896535200.py\n",
+      "Argument count:    0\n",
+      "Positional-only arguments: 0\n",
+      "Kw-only arguments: 0\n",
+      "Number of locals:  0\n",
+      "Stack size:        1\n",
+      "Flags:             OPTIMIZED, NEWLOCALS\n",
+      "Constants:\n",
+      "   0: None\n",
+      "   1: 'Hello, world!'\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis.show_code(myfunc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88550d42-1fe5-4a21-888a-f1f4face2511",
    "metadata": {},
    "outputs": [],
    "source": []
