--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -373,8 +373,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "88550d42-1fe5-4a21-888a-f1f4face2511",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:              mygen\n",
+      "Filename:          /var/folders/rr/0mnyyv811fs5vyp22gf4fxk00000gn/T/ipykernel_76740/3368138942.py\n",
+      "Argument count:    0\n",
+      "Positional-only arguments: 0\n",
+      "Kw-only arguments: 0\n",
+      "Number of locals:  0\n",
+      "Stack size:        1\n",
+      "Flags:             OPTIMIZED, NEWLOCALS, GENERATOR\n",
+      "Constants:\n",
+      "   0: None\n",
+      "   1: 'Hello, world!'\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis.show_code(mygen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dd40447-a6b9-4e9f-993b-72d1e6d32412",
    "metadata": {},
    "outputs": [],
    "source": []
