--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -401,8 +401,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "1dd40447-a6b9-4e9f-993b-72d1e6d32412",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc():\n",
+    "    return 1\n",
+    "    return 2\n",
+    "    return 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "cf77bb23-8dfe-4103-b1fc-89a0097ca658",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1           0 RESUME                   0\n",
+      "\n",
+      "  2           2 LOAD_CONST               1 (1)\n",
+      "              4 RETURN_VALUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis.dis(myfunc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d57ad1ba-2d3f-4428-b095-dfb668d934d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc():\n",
+    "    if False:\n",
+    "        yield 'Hello'\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c71dd1ed-a48a-4967-9d1c-b84cfe4f14f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:              myfunc\n",
+      "Filename:          /var/folders/rr/0mnyyv811fs5vyp22gf4fxk00000gn/T/ipykernel_76740/1059155119.py\n",
+      "Argument count:    0\n",
+      "Positional-only arguments: 0\n",
+      "Kw-only arguments: 0\n",
+      "Number of locals:  0\n",
+      "Stack size:        1\n",
+      "Flags:             OPTIMIZED, NEWLOCALS, GENERATOR\n",
+      "Constants:\n",
+      "   0: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis.show_code(myfunc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "492e9047-fc80-45b2-a842-f85553367831",
    "metadata": {},
    "outputs": [],
    "source": []
